# LiveClawBench

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  registry.json  setup.sh
.claude/: settings.local.json
.github/workflows/: lint.yml  validate.yml
context_create_pipeline/: Case 收集 - Sheet1.csv  hard_tasks_instruction_mock_scoring.csv
context_create_pipeline/plan_creation_audits/: weather-city-travel-pick.md
context_create_pipeline/spec_creation_audits/: weather-outdoor-window.md
docker/base/: Dockerfile
docs/: README.md  running-tasks.md
docs/background/: assistant_task_complexity.md
mock-platform/: .gitignore  DESIGN.md  README.md  package.json  tsconfig.json  tsconfig.typecheck.json
scripts/: check-frontend-contracts.py  extract_hf_parity.py  fix_missing_readability.py  regenerate_rubrics.py  run_dataset.sh  run_runnability_check.sh  validate_annotations.py  validate_tasks.py
shared/: entrypoint.sh
tasks/legacy-stack-migration-deploy/environment/climate_tools/: README.md  pyproject.toml
tasks/legacy-stack-migration-deploy/environment/climate_tools/climate_tools/: __init__.py
tasks/legacy-stack-migration-deploy/environment/climate_tools/tests/: test_climate.py
tasks/python-dependency-hell-resolution/environment/app/: .env.ci  Dockerfile  POLICY.md  constraints.txt  pyproject.toml  requirements-dev.txt  requirements.txt  runbook.md
tasks/python-dependency-hell-resolution/environment/app/src/webapp/: main.py
tasks/python-dependency-hell-resolution/environment/app/tests/: test_main.py
(+2036 files in other folders)
